templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: FGT
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: FGT
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        app: FGT
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pv-data-fgt
              mountPath: /var/lib/postgresql/fgtdata
      volumes:
        - name: pv-data-fgt
          persistentVolumeClaim:
            claimName: pvc-fgt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    name: frontend-deploy
    app: FGT
spec:
  replicas: 2
  selector:
    matchLabels:
      name: frontend-pod
      app: FGT
  template:
    metadata:
      name: frontend-pod
      labels:
        name: frontend-pod
        app: FGT
    spec:
      containers:
        - name: frontend
          image: akhilzemoso/fe_fgt_jenkins:latest
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-budget-deploy
  labels:
    name: backend-budget-deploy
    app: FGT
spec:
  replicas: 2
  selector:
    matchLabels:
      name: backend-budget-pod
      app: FGT
  template:
    metadata:
      name: backend-budget-pod
      labels:
        name: backend-budget-pod
        app: FGT
    spec:
      containers:
        - name: backend
          image: akhilzemoso/be_budget_jenkins:latest
          ports:
            - containerPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-transaction-deploy
  labels:
    name: backend-transaction-deploy
    app: FGT
spec:
  replicas: 2
  selector:
    matchLabels:
      name: backend-transaction-pod
      app: FGT
  template:
    metadata:
      name: backend-transaction-pod
      labels:
        name: backend-transaction-pod
        app: FGT
    spec:
      containers:
        - name: backend
          image: akhilzemoso/be_transaction_jenkins:latest
          ports:
            - containerPort: 8084
